--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "IoT Severe Weather Alert Monitor",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "json-server": "json-server --watch db.json"
   },
   "repository": {
     "type": "git",
