Fixed board/LCD selection problem with updated LCD library the "right" way (in Platformio.ini)

--- a/embedded/SW/platformio.ini
+++ b/embedded/SW/platformio.ini
@@ -17,3 +17,29 @@ lib_deps =
 	https://github.com/adafruit/Adafruit_NeoPixel
 	https://github.com/bblanchon/ArduinoJson
 	bodmer/TFT_eSPI@^2.3.81
+
+build_flags =
+  -Os
+  -DUSER_SETUP_LOADED=1
+  -DST7789_DRIVER=1
+  -DTFT_SDA_READ=1
+  -DCGRAM_OFFSET=1
+  -DTFT_WIDTH=135
+  -DTFT_HEIGHT=240
+  -DTFT_MOSI=19
+  -DTFT_SCLK=18
+  -DTFT_CS=5
+  -DTFT_DC=16
+  -DTFT_RST=23
+  -DTFT_BL=4
+  -DTDT_BACKLIGHT_ON=HIGH
+  -DLOAD_GLCD=1
+  -DLOAD_FONT2=1
+  -DLOAD_FONT4=1
+  -DLOAD_FONT6=1
+  -DLOAD_FONT7=1
+  -DLOAD_FONT8=1
+  -DLOAD_GFXFF=1
+  -DSMOOTH_FONT=1
+  -DSPI_FREQUENCY=40000000
+  -DSPI_READ_FREQUENCY=6000000
